<?php

namespace Interfaces\Enum;

enum Contract
{
    case FULLTIME;
    case PARTIALTIME;
    case SUBSTITUTION;
    case INTERN;
}
